z-index fix

--- a/src/sass/components/_backdrop.scss
+++ b/src/sass/components/_backdrop.scss
@@ -5,7 +5,7 @@
 	align-items: center;
 	top: 0;
 	left: 0;
-	z-index: 2;
+	z-index: 50;
 
 	width: 100%;
 	height: 100%;
